<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright 2014 Joonas Lehtonen
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~     http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Cinema Finlando</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="event_duration_unknown_text">Duration is not known yet</string>
    <string name="event_duration_minutes"> %s min</string>

    <string name="nav_drawer_title_now_showing">Now Showing</string>
    <string name="nav_drawer_title_coming_soon">Coming Soon</string>
    <string name="nav_drawer_divider_cinemas">Cinemas</string>

    <string name="event_menu_view_movie_details">View movie details</string>
    <string name="event_menu_reserve_tickets">Buy tickets</string>
    <string name="event_menu_add_to_calendar">Add to calendar</string>

    <string name="ab_sort_order">Sort order</string>
    <string name="ab_order_by_name">Order by name</string>
    <string name="ab_order_by_date">Order by release date</string>

    <string name="state_error_button_text">Try Again</string>
    <string name="state_error_description_text">Connection error</string>
    <string name="state_empty_default_text">No content</string>

    <string name="theatre_area_schedule_empty_text">No schedule found for selected date.</string>

    <string name="settings_ab_title">Settings</string>

    <string name="pref_query_language_title">Data language</string>
    <string name="pref_title_about">About Application</string>

    <string name="pref_analytics_title">Send crash reports</string>
    <string name="pref_analytics_summary">Allow application to send anonymous crash reports</string>

    <string name="about_finnkino_api_description">This application uses Finnkino public API</string>
    <string name="about_finnkino_api_url" tools:ignore="MissingTranslation">http://www.finnkino.fi/xml</string>
    <string name="about_email_description">Improvement ideas &amp; fan mail</string>
    <string name="about_open_source_licenses_text">Open Source licenses</string>

    <string-array name="pref_query_language_entries">
        <item>Automatic</item>
        <item>Finnish</item>
        <item>English</item>
    </string-array>

    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>
